--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.9.4",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
