--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
